# MailMate

./: .gitignore  Dockerfile  README.md  email.ipynb  graph.ipynb  main.py  pyproject.toml  rag.ipynb  requirements.txt  testing.ipynb  utils.py
