[project]
name = "mailmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-google-community>=2.0.7",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.22",
    "langgraph>=0.4.8",
    "pydantic>=2.11.5",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "typing-extensions>=4.14.0",
]
